# taramux

./: .env  .env.example  .gitignore  .gitmodules  CHANGES.rst  CONTRIBUTING.rst  Makefile  README.rst  compose.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/: renovate.json
.github/workflows/: deploy.yml  test.yml
certbot/: deploy-hook.sh  docker-reload.py
dyndns/: .gitignore  Dockerfile  Makefile  README.rst  pyproject.toml
dyndns/tests/integration/: test_dyndns.py
frontend/: Makefile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  services.ts
frontend/src/components/: LanguageToggle.tsx  ServiceCard.tsx
frontend/src/locales/: en.json  fr.json
haproxy/: haproxy.cfg
nginx/: Dockerfile  bootstrap.py
nginx/conf.d/templates/: nginx.conf.j2  sites-default.conf.j2
prometheus/: prometheus.yml
